syntax = "proto3";

package ml;

// ML Service - Advisor & Analyst Architecture
// Provides intelligence (parameter suggestions) and analysis (robustness checks).
service MLService {
  // ============================================================
  // Advisor Role (Optimization)
  // ============================================================

  // Suggest optimal strategy parameters using Bayesian optimization (Optuna).
  rpc GetSuggestion(SuggestionRequest) returns (SuggestionResponse);

  // ============================================================
  // Analyst Role (Validation)
  // ============================================================

  // Analyze Walk-Forward results to determine strategy robustness.
  rpc AnalyzeWalkForward(WalkForwardAnalysisRequest) returns (WalkForwardAnalysisResponse);

  // ============================================================
  // Legacy / GenAI Integration (Kept for compatibility if needed)
  // ============================================================

  // Report service health state.
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// ============================================================
// Common Messages
// ============================================================

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string service = 2;
  string version = 3;
}

// ============================================================
// Advisor Domain Messages
// ============================================================

message SuggestionRequest {
  // Unique request ID for tracing.
  string request_id = 1;
  // Correlation ID for tracing across services.
  string correlation_id = 2;
  // Strategy identifier (e.g., "RSI_Strategy").
  string strategy_id = 3;
  // Parameter search space definition.
  map<string, ParameterRange> parameter_space = 4;
  // Optimization objective.
  Objective objective = 5;
  // History of previous trials (Stateless mode).
  repeated TrialResult history = 6;
  // Optional: Session ID for stateful optimization.
  string session_id = 7;
}

message ParameterRange {
  string type = 1; // "int", "float", "categorical"
  double min = 2;
  double max = 3;
  double step = 4;
  repeated string choices = 5;
}

message Objective {
  string metric_name = 1; // e.g., "sharpe_ratio"
  string direction = 2;   // "maximize", "minimize"
}

message TrialResult {
  map<string, double> params = 1 [deprecated=true]; // Use typed_params instead if needed, but double is fine for now
  map<string, string> mixed_params = 3; // For categorical support
  map<string, double> metrics = 2;
}

message SuggestionResponse {
  string suggestion_id = 1;
  repeated CandidateParam candidates = 2;
  bool should_stop = 3;
  string stop_reason = 4;
  map<string, string> model_info = 5;
}

message CandidateParam {
  map<string, double> params = 1; // Numeric params
  map<string, string> mixed_params = 3; // Categorical params
  double expected_improvement = 2;
}

// ============================================================
// Analyst Domain Messages
// ============================================================

message WalkForwardAnalysisRequest {
  string request_id = 1;
  string correlation_id = 2;
  repeated WindowResult window_results = 3;
  double risk_free_rate = 4;
}

message WindowResult {
  int32 window_index = 1;
  map<string, double> is_metrics = 2;
  map<string, double> oos_metrics = 3;
}

message WalkForwardAnalysisResponse {
  string analysis_id = 1;
  double stability_score = 2;
  double efficiency_ratio = 3;
  double overfitting_probability = 4;
  string recommendation = 5; // "PASS", "FAIL", "REVIEW"
  string reason = 6;
}
